--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy
-pandas
-scikit-learn
-matplotlib
-seaborn
-xgboost
-lightgbm
-streamlit
-shap
-openai
-joblib
+numpy==1.26.4
+pandas==2.2.0
+scikit-learn==1.3.2
+matplotlib==3.8.2
+seaborn==0.13.0
+xgboost==2.0.3
+lightgbm==4.1.1
+streamlit==1.28.1
+shap==0.43.0
+openai==1.3.9
+joblib==1.3.2
