--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy==1.23.5
-pandas==1.5.3
-scikit-learn==1.1.3
-matplotlib==3.6.3
-seaborn==0.12.2
-xgboost==1.7.6
-lightgbm==3.3.5
-streamlit==1.26.0
-shap==0.42.1
-openai==1.3.9
-joblib==1.3.2
+numpy>=1.26.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+xgboost>=2.0.0
+lightgbm>=4.0.0
+streamlit>=1.26.0
+shap>=0.42.0
+openai>=1.0.0
+joblib>=1.3.0
